--- a/week3-homework/tab.html
+++ b/week3-homework/tab.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>tabUI</title>
-    <link rel="stylesheet" href="tabUI.css">
+    <link rel="stylesheet" href="tabui.css">
 </head>
 
 <body>
