Modify header 부분 CSS수정 완

--- a/week3-homework/tab.html
+++ b/week3-homework/tab.html
@@ -17,17 +17,19 @@
                 </div>
                 <div class="userMessage" ><span > </span><span >안녕하세요 크롱입니다</span><span > </span>
                 </div>
-                <ul class="userSNSInfo" >
-                    <li ><span >review : </span><span class="count" >10</span><span > | </span>
-                    </li>
-                    <li ><span >follower : </span><span class="count" ><span >12</span><span > </span></span><span > | </span>
-                    </li>
-                    <li ><span >following : </span><span class="count" ><span >30</span><span > </span></span><span > </span>
-                    </li>
-                </ul>
+                <div class="userSection">
+                    <ul class="userSNSInfo" >
+                        <li ><span >review : </span><span class="count" >10</span><span > | </span>
+                        </li>
+                        <li ><span >follower : </span><span class="count" ><span >12</span><span > </span></span><span > | </span>
+                        </li>
+                        <li ><span >following : </span><span class="count" ><span >30</span><span > </span></span><span > </span>
+                        </li>
+                    </ul>
+                </div>
             </header>
             <nav >
-                <div class="tab selectedTab" id="position" ><span > </span><span >aboutMe</span><span > </span>
+                <div class="tab" id="position" ><span > </span><span >aboutMe</span><span > </span>
                 </div>
                 <div class="tab" id="friend" ><span > </span><span >friend</span><span > </span>
                 </div>
