Modify nav부분 CSS작성 완

--- a/week3-homework/tab.html
+++ b/week3-homework/tab.html
@@ -19,11 +19,11 @@
                 </div>
                 <div class="userSection">
                     <ul class="userSNSInfo" >
-                        <li ><span >review : </span><span class="count" >10</span><span > | </span>
+                        <li class="userSNSInfoDetail"><span >review : </span><span class="count" >10</span><span > | </span>
                         </li>
-                        <li ><span >follower : </span><span class="count" ><span >12</span><span > </span></span><span > | </span>
+                        <li class="userSNSInfoDetail"><span >follower : </span><span class="count" ><span >12</span><span > </span></span><span > | </span>
                         </li>
-                        <li ><span >following : </span><span class="count" ><span >30</span><span > </span></span><span > </span>
+                        <li class="userSNSInfoDetail"><span >following : </span><span class="count" ><span >30</span><span > </span></span><span > </span>
                         </li>
                     </ul>
                 </div>
@@ -40,7 +40,8 @@
             </nav>
             <section id="my_position" class="eleDisplayShow" >
                 <ul >
-                    <li >
+                    <li class="navList" >
+                    <div>aaa</div>
                         <div class="myName" >blah blah !</div>
                         <div class="myDesc" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque recusandae hic obcaecati maxime officiis commodi! Cumque maiores maxime quam quidem deleniti, aspernatur iste, minima sit laboriosam laudantium saepe dignissimos provident.</div>
                     </li>
