--- a/week3-homework/tab.html
+++ b/week3-homework/tab.html
@@ -47,10 +47,23 @@
                     </li>
                 </ul>
             </section>
-            <section id="my_friend"> </section>
-            <section id="my_theme" > </section>
-            <section id="my_news"> </section>
+            <section id="my_friend"> 
+                <ul>
+                    <li></li>
+                </ul>
+            </section>
+            <section id="my_theme" >
+                <ul>
+                    <li></li>
+                </ul> 
+            </section>
+            <section id="my_news"> 
+                <ul>
+                    <li></li>
+                </ul>
+            </section>
         </div>
     </div>
+    <script type="text/javascript" src="tabui.js"></script>
 </body>
 </html>
