Modify navi메뉴 CSS 수

--- a/week3-homework/tab.html
+++ b/week3-homework/tab.html
@@ -29,13 +29,13 @@
                 </div>
             </header>
             <nav >
-                <div class="tab" id="position" ><span > </span><span >aboutMe</span><span > </span>
+                <div class="tab" id="position" ><span >aboutMe</span>
                 </div>
-                <div class="tab" id="friend" ><span > </span><span >friend</span><span > </span>
+                <div class="tab" id="friend" ><span >friend</span>
                 </div>
-                <div class="tab" id="theme" ><span > </span><span >lorem</span><span > </span>
+                <div class="tab" id="theme" ><span >lorem</span>
                 </div>
-                <div class="tab" id="news" ><span > </span><span >repository</span><span > </span>
+                <div class="tab" id="news" ><span >repository</span>
                 </div>
             </nav>
             <section id="my_position" class="eleDisplayShow" >
