Modify 예외 이벤트 처

--- a/week3-homework/tab.html
+++ b/week3-homework/tab.html
@@ -40,23 +40,23 @@
             </nav>
             <section id="my_position" class="eleDisplayShow" >
                 <ul >
-                    <li class="navList" >
+                    <li class="navPosition" >
                     </li>
                 </ul>
             </section>
             <section id="my_friend"> 
                 <ul>
-                    <li></li>
+                    <li class="navFriend"></li>
                 </ul>
             </section>
             <section id="my_theme" >
                 <ul>
-                    <li></li>
+                    <li class="navTheme"></li>
                 </ul> 
             </section>
             <section id="my_news"> 
                 <ul>
-                    <li></li>
+                    <li class="navNews"></li>
                 </ul>
             </section>
         </div>
