Modify 이벤트 밖으로 빼기. 로직 함수로 빼기

--- a/week3-homework/tab.html
+++ b/week3-homework/tab.html
@@ -28,7 +28,7 @@
                     </ul>
                 </div>
             </header>
-            <nav >
+            <nav class="tabTop">
                 <div class="tab" id="position" ><span >aboutMe</span>
                 </div>
                 <div class="tab" id="friend" ><span >friend</span>
