Modify 4주차 교육내용 반

--- a/week4-class/tab.html
+++ b/week4-class/tab.html
@@ -63,5 +63,15 @@
     </div>
     <script type="text/javascript" src="tabui.js"></script>
     <script type="text/javascript" src="replace.js"></script>
+    <script type="listTemplate" id="listTemplate">
+        <div>{{title}}</div><div>{{body}}</div>
+    </script>
+    <script type="listData" id="listData">
+        <div>{{id}}</div>
+        <div>{{name}}</div>
+        <div>{{content}}</div>
+        <div>{{like}}</div>
+        <div>{{comment}}</div>
+    </script>
 </body>
 </html>
