--- a/week4-class/smallPRJ/view.html
+++ b/week4-class/smallPRJ/view.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="view.css">
 	<title></title>
 </head>
@@ -14,11 +16,11 @@
 		</div>
 		
 		<div class="movePoint" style="transform:translate3d(0px,0px,0px)">
-			<div class="view">1</div>
-			<div class="view">2</div>
-			<div class="view">3</div>
-			<div class="view">4</div>
-			<div class="view">5</div>
+			<div id="view" class="view1">1</div>
+			<div id="view" class="view2">2</div>
+			<div id="view" class="view3">3</div>
+			<div id="view" class="view4">4</div>
+			<div id="view" class="view5">5</div>
 		</div>
 		</div>
 	<!-- <div class="movePoint">
